--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "hamburgers": "^0.5.0",
+    "jquery": "^3.1.0",
     "pug": "^2.0.0-beta6",
+    "slideout": "^0.1.12",
     "vue": "^2.0.0-rc.1"
   },
   "devDependencies": {
@@ -25,6 +28,7 @@
     "gulp-uglify": "^2.0.0",
     "gulp-webpack": "^1.5.0",
     "html-webpack-plugin": "^2.22.0",
+    "mocha": "^3.0.2",
     "pug-loader": "^2.3.0",
     "vinyl-named": "^1.1.0",
     "vue-loader": "^9.2.2",
